# adb-custom

./: Android.mk  BUILD_CACHE_LOCAL.md  BUILD_GUIDE.md  CMakeLists.txt  COMPILATION_SUMMARY.md  DOCS_INDEX.md  Dockerfile  FINAL_COMPILE_GUIDE.md  GITHUB_UPLOAD.md  IMPROVEMENTS.md  Makefile.quick  OTHER_BUILD_METHODS.md  QUICKSTART.md  README_COMPILE.md  WINDOWS_SETUP.md  build.config  build_adb_docker.sh  build_adb_improved.sh  build_adb_local.sh  build_and_upload_cache.sh  build_arm64_aosp.sh  build_cache_docker.bat  build_cache_windows.bat  build_local.bat  build_ndk.bat  build_ndk.sh  quick_build.sh  upload_to_github.bat  upload_to_github.sh
.github/workflows/: build-cache.yml  build-docker.yml  build.yml
daemon/: auth.cpp  main.cpp
jni/: Android.mk  Application.mk
